# Control-de-Accesso-con-Reconocimiento-Facial-Basada-en-IA

./: .gitattributes  .gitignore  README.md  face_Capture.py  pyproject.toml  train_face_recognizer
src/: 01_face_Capture.py  03_face_recognizer.py
